--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,107 @@
   --color-hover-state: rgb(107, 107, 195);
   --color-selected-state: rgb(17, 26, 101);
 }
+
+body {
+  display: grid;
+  place-items: center;
+  height: 100vh;
+}
+
+.carousel {
+  display: grid;
+  grid-template-columns: 3em 800px 3em;
+  grid-template-rows: 70vh 3em;
+  align-items: center;
+  grid-gap: 1em;
+}
+
+.carousel > *:nth-child(2) {
+  grid-column: 2;
+  align-self: stretch;
+}
+/**
+ * Carousel contents
+ */
+
+.carousel_contents-container {
+  overflow: hidden;
+}
+
+.carousel_contents {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.carousel_slide {
+  position: absolute;
+  width: inherit;
+  height: inherit;
+}
+.carousel_slide:nth-child(2) {
+  left: 800px;
+}
+.carousel_slide:nth-child(3) {
+  left: 1600px;
+}
+.carousel_slide > a {
+  display: block;
+  width: inherit;
+  height: inherit;
+}
+.carousel_slide img {
+  width: inherit;
+  height: inherit;
+  object-fit: cover;
+  object-position: center center;
+}
+
+/**
+ * Buttons
+ */
+
+.carousel_button {
+  padding: 0.25em;
+  border: none;
+}
+
+.carousel_button svg {
+  fill: var(--color-default-state);
+}
+
+.carousel_button:hover svg,
+.carousel_button:active svg {
+  fill: var(--color-hover-state);
+}
+.carousel_button.is-hidden {
+  display: none;
+}
+/**
+ * Dots
+ */
+
+.carousel_dots {
+  grid-column: 1 / -1;
+  justify-self: center;
+}
+.carousel_dot {
+  width: 1em;
+  height: 1em;
+  padding: 0;
+  border-radius: 100%;
+  background-color: var(--color-default-state);
+}
+.carousel_dot + .carousel_dot {
+  margin-left: 1em;
+}
+.carousel_dot:hover {
+  background-color: var(--color-hover-state);
+}
+
+.carousel_dot.is-selected {
+  background-color: var(--color-selected-state);
+}
+
+.is-hidden {
+  display: none;
+}
