--- a/css/styles.css
+++ b/css/styles.css
@@ -29,12 +29,12 @@ body {
 .carousel_contents-container {
   overflow: hidden;
 }
-
-/* Ask relative and absolute*/
 .carousel_contents {
   position: relative;
   width: 100%;
   height: 100%;
+  transform: translateX(0);
+  transition: transform 0.3s ease-out;
 }
 .carousel_slide {
   position: absolute;
